# autoware_universe

./: build_depends_humble.repos  build_depends_stable.repos  codecov.yaml  versions.json
.github/: sync-files.yaml
.github/workflows/: build-and-test-differential.yaml  build-and-test-packages-above-differential.yaml  build-and-test-reusable.yaml  bump-repo-versions-build-depends.yaml  bump-version-pr.yaml  cppcheck-weekly.yaml
branch-main/: 404.html  index.html  sitemap.xml
branch-main/CODE_OF_CONDUCT/: index.html
branch-main/CONTRIBUTING/: index.html
branch-main/DISCLAIMER/: index.html
branch-main/common/: index.html
branch-main/common/autoware_agnocast_wrapper/: index.html
branch-main/common/tier4_api_utils/: index.html
branch-main/planning/: index.html
branch-main/search/: search_index.json
common/: .pages
launch/tier4_perception_launch/: package.xml
localization/autoware_pose_initializer/: package.xml
map/autoware_dynamic_lanelet_map_provider/: CMakeLists.txt  README.md  package.xml
map/autoware_dynamic_lanelet_map_provider/config/: lanelet2_map_provider.param.yaml
map/autoware_dynamic_lanelet_map_provider/launch/: lanelet2_map_provider.launch.xml
map/autoware_dynamic_lanelet_map_provider/schema/: lanelet2_map_provider.schema.json
map/autoware_dynamic_lanelet_map_provider/src/: lanelet2_map_provider_node.cpp  lanelet2_map_provider_node.hpp
map/autoware_dynamic_lanelet_map_provider/test/: test_lanelet2_map_provider_node.cpp
map/autoware_map_loader/: README.md
perception/autoware_ground_segmentation_universe/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
perception/autoware_traffic_light_multi_camera_fusion/: package.xml
planning/autoware_external_velocity_limit_selector/: package.xml
sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt
simulator/autoware_carla_interface/: README.md
system/autoware_mrm_comfortable_stop_operator/: README.md
system/autoware_mrm_handler/: package.xml
test-document/: 404.html  index.html  sitemap.xml
test-document/CODE_OF_CONDUCT/: index.html
test-document/CONTRIBUTING/: index.html
test-document/DISCLAIMER/: index.html
test-document/common/: index.html
test-document/planning/: index.html
test-document/search/: search_index.json
(+723 files in other folders)
